
2005-12-23 J.R. Heisey <jrheisey@sourceforge.com
	* src/breakpoints.cc, src/cmd_gpsim.h, cli/cmd_module.cc,
	cli/cmd_processor.cc, gpsim/gpsim.vcproj, gui/gui_breadboard.cc,
	src/interface.cc, plat/win32/libgpsim.def, src/Makefile.am,
	src/makefile.mingw, src/modules.cc, src/modules.h,
	src/processor.cc, src/processor.h, src/sim_context.cc,
	src/sim_context.h, src/src.vcproj, src/symbol.cc, src/symbol.h,
	cli/ui_gpsim.cc, src/ui.cc, src/ui.h: Refactored the functions
	in module.cxx into a ModuleLibary class that contains various
	lists in preparation for a gpsim Perl API. Also fixed the
	gui_breadboard iteration of modules. Now they display
	properly.

2005-12-23 Scott Dattalo <scott@dattalo.com>
	* src/symbol.cc: findRegisterSymbol dumped core if a register was
	being loaded from a module (and not from a processor)
	* src/os_dependent.cc, src/processor.cc: Relative paths were
	getting concatenated to absolute paths
	* src/16bit-processors.cc: ccp1 is now associated with portc2
	
2005-12-19 Scott Dattalo <scott@dattalo.com>
	* src/icd.cc, src/modules.cc, src/pic-processor.cc,
	src/sim_context.cc, modules/paraface.cc: Re-added needed unistd.h
	includes that were removed on 2005-12-10. New systems may not
	unistd, but older ones do.


2005-12-17 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: removed glib dependencies for non-gui builds
	
2005-12-16 Scott Dattalo <scott@dattalo.com>
	* src/ioports.h, src/ioports.cc, src/pic-ioports.h,
	src/pic-ioports.cc: moved some of the functionality in the
	PicPort classes upto the generic Port classes. Also added
	comments. 

2005-12-12 J.R. Heisey <jrheisey@sourceforge.com
	* cli\cmd_symbol.cc, cli\cmd_symbol.h, src\operator.cc,
	cli\parse.yy: I've reconsidered regarding implementing
	and indirection operator. The ampersand character may
	now be used to reference a integer value or a register
	symbol as an indirection operator. I've also made
	it possible to type only an expression enclosed in parens.